Gitignore: add more extensions
Add log, json and yaml extensions to gitignore.
Also expand tfstate files to all files with this extenstion.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 *.tf
+*.tfstate
+*.tfstate.backup
+*.log
+*.json
+*.yaml
 .terraform/
 terraform-provider-selvpc
-terraform.tfstate
-terraform.tfstate.backup
