Docs: add website files for basic resources (#32)
* Docs: add website files for basic resources

This commit adds basic website documentation files:

 - main selvpc.erb template;
 - index website file;
 - documentation about projects;
 - documentation about floating IPs;
 - documentation about licenses.

Also it adds website-test target execution to the Travis CI.

* Travis CI: add the Docker service

Add Docker to run the website tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 language: go
 go:
   - "1.10.1"
+services:
+  - "docker"
 
 install:
 # This script is used by the Travis build to install a cookie for
@@ -19,6 +21,7 @@ script:
   - make importscheck
   - make lintcheck
   - make vet
+  - make website-test
 
 branches:
   only:
