--- a/.travis.yml
+++ b/.travis.yml
@@ -6,23 +6,14 @@ services:
   - "docker"
 
 install:
-# This script is used by the Travis build to install a cookie for
-# go.googlesource.com so rate limits are higher when using `go get` to fetch
-# packages that live there.
-# See: https://github.com/golang/go/issues/12933
-  # - bash scripts/gogetcookie.sh
   - go get golang.org/x/tools/cmd/goimports
-  - go get golang.org/x/lint/golint
   - go get github.com/golang/dep/cmd/dep
-  - go get github.com/go-critic/go-critic/...
+  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $GOPATH/bin v1.12.3
 
 script:
   - make test
   - make vendor-status
-  - make importscheck
   - make lintcheck
-  - make vet
-  - make critic
   - make website-test
 
 branches:
