--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,15 @@ go:
   - "1.11.x"
 services:
   - "docker"
+env:
+  - GOFLAGS=-mod=vendor GO111MODULE=on
 
 install:
   - go get golang.org/x/tools/cmd/goimports
-  - go get github.com/golang/dep/cmd/dep
   - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -b $GOPATH/bin v1.12.5
 
 script:
   - make test
-  - make vendor-status
   - make lintcheck
   - make website-test
 
