Disable gomnd, wsl linters
Disable some linters that we don't care about.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,9 +6,11 @@ linters:
   fast: false
   enable-all: true
   disable:
+    - gomnd
     - errcheck
     - gochecknoglobals
     - gochecknoinits
     - lll
     - unparam
     - funlen
+    - wsl
