Update GolangCI-Lint to v1.23.8 (#77)
* Update GolangCI-Lint to v1.23.8

Use newer GolangCI-Lint in .travis.yml.

* Disable gomnd, wsl linters

Disable some linters that we don't care about.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,10 +1,16 @@
+run:
+  deadline: 5m
+  modules-download-mode: vendor
+
 linters:
   fast: false
   enable-all: true
   disable:
+    - gomnd
     - errcheck
     - gochecknoglobals
     - gochecknoinits
     - lll
     - unparam
     - funlen
+    - wsl
