MKS V1: add cluster resource
Implement "selectel_mks_cluster_v1" resource with acceptance test.
Add helper functions in "mks.go" with needed tests.
Vendor mks-go v0.2.0.

Also this commit temporarily updates gocognit linter settings
in .golangci.yml

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,3 +14,8 @@ linters:
     - unparam
     - funlen
     - wsl
+
+linters-settings:
+  gocognit:
+    # cognitive complexity 75 of func `resourceMKSClusterV1Update` is high (> 30) (gocognit)
+    min-complexity: 75
