Exclude staticcheck SA1019
Disable deprecation warnings for now.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,3 +16,9 @@ linters:
     - wsl
     - testpackage
     - nestif
+
+issues:
+  exclude-rules:
+    - linters:
+        - staticcheck
+      text: "SA1019:"
