Fix Acceptance Tests name and schedule
Run scheduled tests before testing MKS cluster will enter MAINTENANCE
mode.

Fix job name.

--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -5,10 +5,10 @@ on:
       - master
   pull_request:
   schedule:
-    - cron: '0 3 * * *'
+    - cron: '0 0 * * *'
 
 jobs:
-  accepance-test:
+  acceptance-test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
