--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           go-version: 1.14
 
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v1
+
       - name: Run test
         run: make testacc
         env:
