DBaaS V1: add datastore type data source

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -60,3 +60,7 @@ issues:
     - linters:
         - errcheck
       text: "Error return value of `d.Set` is not checked"
+
+    - linters:
+        - gosec
+      text: "G501:"
