DBaaS V1: add extension resource
Implement "selectel_dbaas_extension_v1" resource with acceptance test

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -51,6 +51,10 @@ linters:
     - varcheck
     - whitespace
 
+linters-settings:
+  dupl:
+    threshold: 200
+
 issues:
   exclude-rules:
     - linters:
