--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches:
       - master
-      - update-kube-options
   schedule:
     - cron: '0 0 * * *'
 
@@ -30,7 +29,7 @@ jobs:
       - name: Run test
         run: make testacc
         env:
-          GO_FLAGS: -mod=vendor
+          GO_FLAGS: -mod=vendor -v
           GO111MODULE: on
           SEL_TOKEN: ${{ secrets.SEL_TOKEN }}
 
