--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -7,16 +7,14 @@ on:
 
 jobs:
   golangci-lint:
+    strategy:
+      matrix:
+        go-version: [ 1.17.x ]
     name: lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
