update: golang to 1.20 update: golangci-lint to 1.50.1 change: golangci-lint.yml, remove deprecated linters
Signed-off-by: Kulakov Ilya <kulakov@selectel.ru>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,7 +7,6 @@ linters:
   enable:
     - asciicheck
     - bodyclose
-    - deadcode
     - depguard
     - dogsled
     - dupl
@@ -25,15 +24,12 @@ linters:
     - gofumpt
     - goheader
     - goimports
-    - golint
     - gomodguard
     - goprintffuncname
     - gosec
     - gosimple
     - govet
     - ineffassign
-    - interfacer
-    - maligned
     - misspell
     - nakedret
     - nlreturn
@@ -41,15 +37,13 @@ linters:
     - nolintlint
     - prealloc
     - rowserrcheck
-    - scopelint
+    - revive
     - sqlclosecheck
     - staticcheck
-    - structcheck
     - stylecheck
     - typecheck
     - unconvert
     - unused
-    - varcheck
     - whitespace
 
 linters-settings:
