update: golang to 1.20 (#223)
* update: golang to 1.20
update: golangci-lint to 1.50.1
change: golangci-lint.yml, remove deprecated linters

Signed-off-by: Kulakov Ilya <kulakov@selectel.ru>

* update: actions to v3

Signed-off-by: Kulakov Ilya <kulakov@selectel.ru>

* fix: golangci-lint workflow

Signed-off-by: Kulakov Ilya <kulakov@selectel.ru>

* fix: linter issues
update: golangci action to v3

Signed-off-by: Kulakov Ilya <kulakov@selectel.ru>

* fix: linter issues
update: golangci action to v3

Signed-off-by: Kulakov Ilya <kulakov@selectel.ru>

---------

Signed-off-by: Kulakov Ilya <kulakov@selectel.ru>
Co-authored-by: Kulakov Ilya <kulakov@selectel.ru>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,10 +4,10 @@ run:
 
 linters:
   fast: false
+  disable-all: true
   enable:
     - asciicheck
     - bodyclose
-    - deadcode
     - depguard
     - dogsled
     - dupl
@@ -25,15 +25,12 @@ linters:
     - gofumpt
     - goheader
     - goimports
-    - golint
     - gomodguard
     - goprintffuncname
     - gosec
     - gosimple
     - govet
     - ineffassign
-    - interfacer
-    - maligned
     - misspell
     - nakedret
     - nlreturn
@@ -41,15 +38,13 @@ linters:
     - nolintlint
     - prealloc
     - rowserrcheck
-    - scopelint
+    - revive
     - sqlclosecheck
     - staticcheck
-    - structcheck
     - stylecheck
     - typecheck
     - unconvert
     - unused
-    - varcheck
     - whitespace
 
 linters-settings:
