--- a/.golangci.yml
+++ b/.golangci.yml
@@ -10,7 +10,7 @@ linters:
     - bodyclose
     - depguard
     - dogsled
-    - dupl
+    # - dupl
     - errcheck
     - exhaustive
     - exportloopref
