Move domains resources to keystone auth
Move acc tests to new auth
Also remove remains SEL_TOKEN mentions

--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -29,5 +29,6 @@ jobs:
       - name: Run test
         run: make testacc
         env:
-          SEL_TOKEN: ${{ secrets.SEL_TOKEN }}
-
+          OS_DOMAIN_NAME: ${{ secrets.OS_DOMAIN_NAME }}
+          OS_USERNAME:    ${{ secrets.OS_USERNAME }}
+          OS_PASSWORD:    ${{ secrets.OS_PASSWORD }}
