Add audit logs parameters support to MKS (#306)
* feat: add audit logs params to create/update/get cluster

(cherry picked from commit 65dc7d51b21c378ae7d586cd61cbddff6bd02182)

* fix: semgrep alerts

* fix lint & semgrep pipeline

* fix: revert secure pipeline & remove p/gitlab

* feat: add semgrep to makefile & fix  it's rules

* fix docs

---------

Co-authored-by: belokobylskii.i <belokobylskii.i@selectel.ru>

--- a/.github/workflows/secure.yml
+++ b/.github/workflows/secure.yml
@@ -21,14 +21,13 @@ jobs:
       security-events: write
     steps:
       - uses: actions/checkout@v4
-      - run: semgrep scan --sarif --output=semgrep.sarif --error --severity=WARNING
+      - run: semgrep scan --sarif --output=semgrep.sarif --error --severity=WARNING --severity=ERROR
         env:
           SEMGREP_RULES: >-
             p/command-injection
             p/comment
             p/cwe-top-25
             p/default
-            p/gitlab
             p/gitleaks
             p/golang
             p/gosec
