--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.22.7'
+          go-version: "1.23"
       - run: make test
 
   golangci-lint:
@@ -22,10 +22,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.22.7'
+          go-version: "1.23"
       - uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.56.2
+          version: v1.62.0
 
   tidy:
     runs-on: ubuntu-24.04
@@ -33,6 +33,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '1.22.7'
+          go-version: "1.23"
       - run: go mod tidy -v
       - run: git diff --exit-code
