--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -25,7 +25,7 @@ jobs:
           go-version: "1.23"
       - uses: golangci/golangci-lint-action@v6
         with:
-          version: 2.1.6
+          version: v2.1.6
 
   tidy:
     runs-on: ubuntu-24.04
