--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,7 +15,7 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - '-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}'
+      - '-s -w -X github.com/terraform-providers/terraform-provider-selectel/version.Version={{.Version}} -X github.com/terraform-providers/terraform-provider-selectel/version.Commit={{.Commit}}'
     goos:
       - freebsd
       - windows
